--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Title Goes Here</title> 
   </head> 
   <body> 
-    <p>This is my web page</p> 
+    <p>Hi Mum!</p> 
   </body> 
 </html>
