Add Image of Mountain

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head> 
   <body> 
     <p>Hi Mum!</p> 
+    <img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
   </body> 
 </html>
