--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head> 
   <body> 
     <p>Hi Mum!</p> 
-    <img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+    <img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
   </body> 
 </html>
